--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@fastify/oauth2": "^7.2.2",
     "async": "^3.2.1",
     "bfx-facs-base": "git+https://github.com/bitfinexcom/bfx-facs-base.git",
-    "debug": "^4.3.4",
-    "lodash": "^4.17.21"
+    "debug": "^4.3.4"
   },
   "engine": {
     "node": ">=8.0"
